--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@
 
 /* menu */
 .bg{
-    background-image: url('https://github.com/IrannaYI/hotel/blob/main/src/bg-1.jpg');
+    background-image: url('https://www.shutterstock.com/image-photo/empty-wooden-table-blurred-restaurant-600nw-2478923883.jpg');
     height: 100vh;
     width: 100%;
     background-position: center;
